# webframework

./: .coverage  .gitignore  .paralax.json  ACTION_PLAN.md  COMPONENT_SHOWCASE_IMPLEMENTATION.md  DOCUMENTATION.md  DOCUMENTATION_FINAL_REPORT.md  DOCUMENTATION_FINAL_SUMMARY.md  FILE_MANAGER_AI.md  FILE_SYSTEM.md  HELP_SYSTEM_CHANGES.md  LOGGING_IMPLEMENTATION.md  MANAGE_EXAMPLE_SCRIPTS.md  PRODUCTION_DEPLOYMENT_REDHAT.md  README.md  REFACTORING_GUIDE.md  SHOWCASE_IMPLEMENTATION.md  TEST_REFACTORING_SUMMARY.md  TINYMCE_LICENSE.md  VENDOR_UPDATES.md  ai.md  babel.cfg  build_docs.bat  build_docs.sh  check_thumbs.py  config.json  config.py  create_example_files.py  debug_guide.py  debug_i18n.py  demo.py  demo_enhanced_threading.py  demo_scheduler_action.py  demo_threaded_complete.py  fix_api_modules.py  framework_manager.py  log_config.ini  manage_example_website.bat  manage_example_website.sh  nohup.out  (+12 more)
.github/: copilot-instructions.md
Manual_Webapp/: .gitignore  README.md  log_config.ini  main.py  setup_logging.py
docs/: AI_CODE_REVIEW_GUIDE.md  AUTH_DECORATOR_USAGE.md  DOCUMENTATION_UPDATE_SUMMARY.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_SYSTEM.md  check_docstrings.py  file_manager_blueprint_merge_analysis.md  file_manager_refactoring_summary.md  fix_items_docstrings.py  javascript_removal_analysis.md
logs/: file_manager.manager.log.2025-12-23  file_manager.storage.log.2025-12-23  main.log.2025-12-23  socketio_manager.log.2026-01-06  src.modules.i18n.log.2026-01-06  src.modules.tooltip_manager.manager.log.2026-01-06
src/: BTL.bat  BTL.sh  SFTPConnection.py  User_defined_module.py  __init__.py  __main__.py  access_manager.py  action.py  auth.py  auth_server.py  bootstrap.py  bug_tracker.py  common.py  displayer.py  log_config.ini  log_utils.py  main.py  otp_manager.py  updater.py  (+10 more)
(+410 files in other folders)
